--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -21,6 +21,10 @@
   z-index: 10000;
 }
 
+.subMenu {
+  padding-left: 1rem;
+}
+
 .page-enter-active, .page-leave-active {
   transition: opacity .1s;
 }
