--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -21,6 +21,14 @@
   z-index: 10000;
 }
 
+.header-menu {
+  margin-bottom: 1rem;
+}
+
+.grid-content {
+  min-height: 0.02px;
+}
+
 .subMenu {
   padding-left: 1rem;
 }
