--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -72,6 +72,11 @@
 .el-badge__content {
   background-color: #29313D !important;
 }
+.el-pagination button,
+.el-pagination ul,
+.el-pagination li {
+  background: transparent !important;
+}
 
 /* Router Progress */
 .page-enter-active, .page-leave-active {
@@ -79,6 +84,17 @@
 }
 .page-enter, .page-leave-to {
   opacity: 0;
+}
+
+/* Anime Background */
+.animeBackground {
+  position: fixed;
+  background-image: url('/anime.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
 
 /* Desktop */
