--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -100,7 +100,7 @@ hr {
   color: #FFF !important;
 }
 .el-badge__content {
-  background-color: #4183C4 !important;
+  background-color: #ED1C24 !important;
 }
 .el-pagination button,
 .el-pagination ul,
