--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #00142B !important;
+}
+
 hr {
   height: 1px !important;
   margin: .5rem 0 !important;
@@ -41,7 +45,7 @@ hr {
 
 .containerSubject {
   margin-bottom: 1rem;
-  color: #202020;
+  color: #FFF;
   font-size: 1.2rem;
 }
 
@@ -53,27 +57,38 @@ hr {
 }
 .el-header {
   margin-bottom: 1rem !important;
+  border-bottom: 1px solid #21374F !important;
 }
 .el-menu {
   border: 0 !important;
+  background: #00142B !important;
+  border-bottom: 1px solid #21374F !important;
 }
 .el-menu-item,
 .el-submenu__title {
+  background-color: transparent !important;
   border-bottom: 0 !important;
+  color: rgba(255, 255, 255, .65) !important;
 }
 .el-menu-item svg {
   margin-bottom: 5px !important;
 }
+.el-menu-item:hover,
+.el-submenu__title:hover,
+.el-menu-item:active,
+.el-submenu__title:active {
+  background-color: transparent !important;
+}
 .el-aside {
   position: fixed;
   height: 100%;
-  background: #FFF;
+  background: #00142B;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.08);
   z-index: 10000;
 }
 .el-button--primary {
-  border-color: #29313D !important;
-  background-color: #29313D !important;
+  border-color: #00B8FF !important;
+  background-color: #00B8FF !important;
 }
 .el-button--warning {
   border-color: #FFC90E !important;
@@ -83,18 +98,24 @@ hr {
   border-color: #ED1C24 !important;
   background-color: #ED1C24 !important;
 }
+.el-button--info {
+  border-color: #99A3AE !important;
+  background-color: #99A3AE !important;
+  color: #00142B !important;
+}
 .el-button--primary:hover,
 .el-button--warning:hover,
-.el-button--danger:hover {
+.el-button--danger:hover,
+.el-button--info:hover {
   opacity: .8;
 }
 .el-radio-button span:hover {
   color: #409EFF !important;
 }
 .el-radio-button.is-active span {
-  background-color: #29313D !important;
-  border-color: #29313D !important;
-  box-shadow: -1px 0 0 0 #29313D !important;
+  background-color: #00B8FF !important;
+  border-color: #00B8FF !important;
+  box-shadow: -1px 0 0 0 #00B8FF !important;
 }
 .el-radio-button.is-active span:hover {
   color: #FFF !important;
