--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -1,3 +1,5 @@
+body { background: #F9F9F9 }
+
 hr {
   height: 1px !important;
   margin: .5rem 0 !important;
@@ -24,9 +26,7 @@ hr {
   display: flex;
   flex-direction: column;
 }
-.Container > .item {
-  display: flex;
-}
+.Container > .item { display: flex }
 .Container > .item > .content {
   display: flex;
   flex: 1;
@@ -48,22 +48,41 @@ hr {
 /* Element UI Customize */
 .el-header,
 .el-main,
-.el-footer {
-  padding: 0 !important;
-}
-.el-header {
-  margin-bottom: 1rem !important;
-}
+.el-footer { padding: 0 !important }
+.el-header { margin-bottom: 1rem !important }
 .el-menu {
   border: 0 !important;
+  background-color: transparent !important;
 }
+li.is-active { background-color: #29313D !important }
+li.Logo.is-active { background-color: transparent !important }
+ul.el-menu li,
+ul.el-menu .el-submenu__title { color: #333 !important }
+ul.el-menu li:hover,
+ul.el-menu .el-submenu__title:hover,
+ul.el-menu--horizontal li,
+ul.el-menu--horizontal .el-submenu__title,
+.el-menu--popup li.el-menu-item:hover { color: #FFF !important }
+.el-menu--popup li.el-menu-item {
+  height: 40px !important;
+  line-height: 40px !important;
+  color: #29313D !important;
+}
+.el-menu--popup li.el-menu-item.is-active { color: #FFF !important }
 .el-menu-item,
 .el-submenu__title {
+  height: 50px !important;
+  line-height: 50px !important;
   border-bottom: 0 !important;
+  color: #FFF !important;
 }
-.el-menu-item svg {
-  margin-bottom: 5px !important;
-}
+.el-menu-item:hover,
+.el-submenu__title:hover { background: #29313D !important }
+.el-menu-item.is-active { color: #FFF !important }
+.el-menu-item svg { margin-bottom: 5px !important }
+.el-menu--horizontal > .el-submenu .el-submenu__title,
+.el-menu--horizontal > .el-submenu:focus .el-submenu__title,
+.el-menu--horizontal > .el-submenu:hover .el-submenu__title { color: #FFF !important }
 .el-aside {
   position: fixed;
   height: 100%;
@@ -72,9 +91,7 @@ hr {
   z-index: 10000;
 }
 
-.el-button--small {
-  height: 32px !important;
-}
+.el-button--small { height: 32px !important }
 .el-button--info {
   border-color: #6d7084 !important;
   background-color: #6d7084 !important;
@@ -94,38 +111,24 @@ hr {
 .el-button--info:hover,
 .el-button--primary:hover,
 .el-button--warning:hover,
-.el-button--danger:hover {
-  opacity: .8;
-}
-.el-radio-button span:hover {
-  color: #25c6ff !important;
-}
+.el-button--danger:hover { opacity: .8 }
+.el-radio-button span:hover { color: #25c6ff !important }
 .el-radio-button.is-active span {
   background-color: #29313D !important;
   border-color: #29313D !important;
   box-shadow: -1px 0 0 0 #29313D !important;
 }
-.el-radio-button.is-active span:hover {
-  color: #FFF !important;
-}
-.el-select {
-  min-width: 6rem !important;
-}
-.el-badge__content {
-  background-color: #ED1C24 !important;
-}
+.el-radio-button.is-active span:hover { color: #FFF !important }
+.el-select { min-width: 6rem !important }
+.el-badge__content { background-color: #ED1C24 !important }
 .el-pagination button,
 .el-pagination ul,
 .el-pagination li { background: transparent !important }
 .el-pagination li { margin-top: 0 !important }
 
 /* Router Progress */
-.page-enter-active, .page-leave-active {
-  transition: opacity .5s;
-}
-.page-enter, .page-leave-to {
-  opacity: 0;
-}
+.page-enter-active, .page-leave-active { transition: opacity .5s }
+.page-enter, .page-leave-to { opacity: 0 }
 
 /* Anime Background */
 .animeBackground {
