--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -48,7 +48,10 @@ hr {
 /* Element UI Customize */
 .el-header,
 .el-main,
-.el-footer { padding: 0 !important }
+.el-footer {
+  padding: 0 !important;
+  overflow: hidden !important;
+}
 .el-header { margin-bottom: 1rem !important }
 .el-menu {
   border: 0 !important;
@@ -127,8 +130,16 @@ ul.el-menu--horizontal .el-submenu__title,
 .el-pagination li { margin-top: 0 !important }
 
 /* Router Progress */
-.page-enter-active, .page-leave-active { transition: opacity .5s }
-.page-enter, .page-leave-to { opacity: 0 }
+.page-enter-active, .page-leave-active {
+  transition-duration: .5s;
+
+}
+.page-enter {
+  transform: translateX(10rem);
+}
+.page-leave-to {
+
+}
 
 /* Anime Background */
 .animeBackground {
