--- a/frontend/assets/main.css
+++ b/frontend/assets/main.css
@@ -190,3 +190,11 @@ ul.el-menu--horizontal .el-submenu__title,
   height: 250px;
   margin: 0 auto;
 }
+
+.grecaptcha-logo {
+  visibility: hidden;
+}
+
+.grecaptcha-badge {
+  visibility: hidden;
+}
